--- a/packages/alloy-utils/package.json
+++ b/packages/alloy-utils/package.json
@@ -3,9 +3,6 @@
   "version": "1.14.4",
   "description": "Common utils for Alloy",
   "main": "lib/index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "keywords": [
     "alloy",
     "common",
@@ -23,5 +20,8 @@
     "lodash": "^4.17.15",
     "resolve": "^1.12.0",
     "xmldom": "^0.1.27"
+  },
+  "engines": {
+    "node": ">=10.0.0"
   }
 }
