--- a/lerna.json
+++ b/lerna.json
@@ -5,8 +5,7 @@
   "command": {
     "publish": {
       "allowBranch": "master",
-      "message": "chore(release): publish %s",
-      "noPush": true
+      "message": "chore(release): publish %s"
     }
   }
 }
