--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "description": "Tooling for Alloy",
   "private": true,
   "scripts": {
+    "lerna:bootstrap": "lerna bootstrap",
     "lerna:publish": "lerna publish --yes --conventional-commits",
     "lint": "eslint packages",
     "test": "jest"
