--- a/packages/alloy-compiler/package.json
+++ b/packages/alloy-compiler/package.json
@@ -9,6 +9,11 @@
   ],
   "author": "Axway Appcelerator",
   "license": "Apache-2.0",
+  "homepage": "https://github.com/appcelerator/alloy-devkit/tree/develop/packages/alloy-compiler#readme",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/appcelerator/alloy-devkit.git"
+  },
   "dependencies": {
     "@babel/generator": "^7.8.3",
     "@babel/parser": "^7.8.3",
