--- a/packages/alloy-utils/package.json
+++ b/packages/alloy-utils/package.json
@@ -10,6 +10,11 @@
   ],
   "author": "Axway Appcelerator",
   "license": "Apache-2.0",
+  "homepage": "https://github.com/appcelerator/alloy-devkit/tree/develop/packages/alloy-utils#readme",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/appcelerator/alloy-devkit.git"
+  },
   "dependencies": {
     "@babel/code-frame": "^7.8.3",
     "chmodr": "^1.2.0",
