chore: update eslint ignore

--- a/.eslintignore
+++ b/.eslintignore
@@ -1,4 +1,5 @@
 **/node_modules
 packages/alloy-compiler/template
 packages/alloy-compiler/builtins
+packages/alloy-compiler/test/unit/fixtures/test-app/Resources
 packages/alloy-utils/lib/grammar/tss.js
