--- a/packages/alloy-utils/package.json
+++ b/packages/alloy-utils/package.json
@@ -23,6 +23,7 @@
     "global-paths": "^1.0.0",
     "jsonlint": "^1.6.3",
     "lodash": "^4.17.15",
+    "moment": "^2.24.0",
     "resolve": "^1.12.0",
     "xmldom": "^0.1.27"
   },
