--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,37 +3,5 @@ updates:
 - package-ecosystem: npm
   directory: "/"
   schedule:
-    interval: daily
-    time: "10:00"
+    interval: weekly
   open-pull-requests-limit: 10
-  reviewers:
-  - janvennemann
-  ignore:
-  - dependency-name: "@babel/generator"
-    versions:
-    - 7.13.0
-    - 7.13.16
-  - dependency-name: "@babel/types"
-    versions:
-    - 7.12.13
-    - 7.12.17
-    - 7.13.0
-    - 7.13.13
-    - 7.13.14
-    - 7.13.17
-  - dependency-name: "@babel/parser"
-    versions:
-    - 7.13.13
-    - 7.13.15
-    - 7.13.16
-    - 7.13.4
-  - dependency-name: "@babel/traverse"
-    versions:
-    - 7.12.13
-    - 7.12.17
-    - 7.13.0
-    - 7.13.15
-    - 7.13.17
-  - dependency-name: eslint-config-axway
-    versions:
-    - 6.0.0
